# tg-weather-bot

./: .gitignore  LICENSE  README.md  cities.json  citis.py  db.sqlite3  pyproject.toml  replace.txt
app/: keyboards.py  main.py
app/api/: get_cats.py  get_weather.py
app/db/: models.py  requests.py
