[project]
name = "python-cats-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.20.0.post0",
    "aiosqlite>=0.21.0",
    "asyncio>=3.4.3",
    "python-dotenv>=1.2.1",
    "pytz>=2025.2",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.44",
]
